Added missing compoents to original :)

--- a/original/RacersLeaderboard/Views/Home/Index.cshtml
+++ b/original/RacersLeaderboard/Views/Home/Index.cshtml
@@ -60,23 +60,23 @@
         <h3>Standings</h3>
         <h4>Statistics</h4>
         <p>
-            <span>@($"{baseUrl}/stats")</span>
-            <img src="/stats" />
+            <span>@($"{baseUrl}/tables/stats")</span>
+            <img src="/tables/stats" />
         </p>        
         <h4>Ranked by iRating</h4>
         <p>
-            <span>@($"{baseUrl}/leaderboard")</span>
-            <img src="/leaderboard" />
+            <span>@($"{baseUrl}/tables/leaderboard")</span>
+            <img src="/tables/leaderboard" />
         </p>        
         <h4>Seaon</h4>
         <p>
-            <span>@($"{baseUrl}/season/<seasonid>, e.g. {baseUrl}/season/1839")</span>
-            <img src="/season/1839" />
+            <span>@($"{baseUrl}/tables/season/<seasonid>, e.g. {baseUrl}/tables/season/1839")</span>
+            <img src="/tables/season/1839" />
         </p>
         <h4>Ranked by Time Trial season</h4>
         <p>
-            <span>@($"{baseUrl}/timetrials/<seasonid>, e.g.{baseUrl}/timetrials/1839")</span>
-            <img src="/timetrials/1839" />
+            <span>@($"{baseUrl}/tables/timetrials/<seasonid>, e.g.{baseUrl}/tables/timetrials/1839")</span>
+            <img src="/tables/timetrials/1839" />
         </p>
     </div>
 </div>
